Add optional mandatory-users and mandatory-groups in wz branch reviewers

--- a/sample_repo_configuration.yml
+++ b/sample_repo_configuration.yml
@@ -115,6 +115,9 @@ wz-branch-reviewers:
       - senior.dev2
     groups:
       - project.developers
+    mandatory-users:
+      - the.boss
+    mandatory-groups: []
     paths: # path specific reviewers
       - path: "frontend/**/*.css"
         users:
