--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
                          , { deps
                            , [ {jesse,          "1.5.5"}
                              , {meck,           "0.8.12"}
-                             , {proper,         "1.3.0"}
+                             , {proper,         {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}}
                              , {proper_contrib, "0.3.2"}
                              , {redbug,         "1.2.1"}
                              , {elvis_core,     "0.4.2"}
