--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {deps                 , [ {getopt,   "v0.8.2"}
                         , {jsx,      "2.8.0"}
                         , {lager,    "3.6.9"}
-                        , {mustache, {git, "https://github.com/mojombo/mustache.erl.git", "v0.1.1"}}
+                        , {mustache, {git, "https://github.com/mojombo/mustache.erl.git", {tag, "v0.1.1"}}}
                         , {yamerl,   "v0.6.0"}
                         ]}.
 {plugins              , [covertool, rebar3_proper]}.
@@ -26,7 +26,7 @@
                          , { deps
                            , [ {jesse,          "1.5.5"}
                              , {meck,           "0.8.12"}
-                             , {proper,         {git, "https://github.com/proper-testing/proper", {tag, "v1.3"}}}
+                             , {proper,         {git, "https://github.com/proper-testing/proper.git", {tag, "v1.3"}}}
                              , {proper_contrib, "0.3.2"}
                              , {redbug,         "1.2.1"}
                              , {elvis_core,     "0.4.2"}
