Add unapprove-on-update parameter to sample yaml. Adapt line lenght to avoid linting error

--- a/sample_repo_configuration.yml
+++ b/sample_repo_configuration.yml
@@ -91,6 +91,7 @@ pr-restrictions:
   required-all-tasks-complete: true
   required-approvers: 2
   required-successful-builds: 1
+  unapprove-on-update: true
   merge-config:
     default-strategy: no-ff
     enabled-strategies:
