--- a/sample_repo_configuration.yml
+++ b/sample_repo_configuration.yml
@@ -106,6 +106,7 @@ wz-pr-restrictions:
     approval-quota: 0 # The percentage of individuals reviewing a PR who must approve it before it can be merged
     group-quota: 1 # Minimum number of approvals required per group
     ignore-self-approve: true # Pull request code contributor approvals are not counted towards quotas
+    merge-condition: "approvalCount > 1 & groupQuota >= 1"
 
 # Workzone Branch Reviewers
 wz-branch-reviewers:
