Fix Dialyzer errors
Also, use -Wunknown when running Dialyzer to catch unknown types and
functions.

--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,10 @@
                         , deprecated_function_calls
                         , deprecated_functions
                         ]}.
-{dialyzer_opts, [{check_plt, true}]}.
+{dialyzer, [ {check_plt, true}
+           , {warnings, [unknown]}
+           ]}.
+
 {profiles     , [ {prod, [ {relx, [ {dev_mode, false}, {include_erts, true}]}]}
                 , {test, [ { erl_opts, [ nowarn_export_all
                                        , nowarn_missing_spec_all
