Remove undefined dialyzer option

--- a/rebar.config
+++ b/rebar.config
@@ -17,8 +17,7 @@
                         , deprecated_function_calls
                         , deprecated_functions
                         ]}.
-{dialyzer, [ {check_plt, true}
-           , {warnings, [unknown]}
+{dialyzer, [ {warnings, [unknown]}
            ]}.
 
 {profiles     , [ {prod, [ {relx, [ {dev_mode, false}, {include_erts, true}]}]}
