--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,13 @@
                         , {mustache, {git, "https://github.com/mojombo/mustache.erl.git", {tag, "v0.1.1"}}}
                         , {yamerl,   "v0.6.0"}
                         ]}.
-{plugins              , [covertool, rebar3_proper]}.
+
+{plugins              , [ covertool
+                        , rebar3_proper
+                        , {gradualizer, {git, "https://github.com/josefs/Gradualizer.git",
+                                         {ref, "eb8fc7431275d00ff41f266297e4b3b7de5330b9"}}}
+                        ]}.
+
 {cover_export_enabled , true}.
 {covertool_eunit      , {"eunit.coverdata", "eunit.coverage.xml"}}.
 {covertool_ct         , {"ct.coverdata", "ct.coverage.xml"}}.
