Use `warnings_as_errors`, not `fail_on_warning`

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{erl_opts             , [fail_on_warning, debug_info]}.
+{erl_opts             , [ warnings_as_errors
+                        , debug_info
+                        ]}.
+
 {cover_enabled        , true}.
 {deps                 , [ {getopt,   "v0.8.2"}
                         , {jsx,      "2.8.0"}
