Allow injecting OS env vars into YAML files via custom !env tag
This mechanism is intended for the handling of secrets: instead of
having to store the secret in plain text in a .yml (or .ymlt) file,
the value can be taken from an OS environment variable at the time the
configuration is applied.

--- a/sample_repo_configuration.yml
+++ b/sample_repo_configuration.yml
@@ -144,7 +144,7 @@ webhooks:
     active: true
     url: https://my_endpoint
     configuration:
-      secret: my_secret
+      secret: !env MY_SECRET
     events:
       - pr:modified
       - repo:refs_changed
@@ -152,6 +152,6 @@ webhooks:
     active: true
     url: http://my_other_endpoint
     configuration:
-      secret: my_other_secret
+      secret: !env MY_OTHER_SECRET
     events:
       - pr:modified
