Remove jesse test dependency
This is not used anymore, and does not with with OTP 26.

--- a/rebar.config
+++ b/rebar.config
@@ -32,8 +32,7 @@
                                        ]
                            }
                          , { deps
-                           , [ {jesse,          "1.5.5"}
-                             , {meck,           "0.8.12"}
+                           , [ {meck,           "0.8.12"}
                              , {proper,         {git, "https://github.com/proper-testing/proper.git", {tag, "v1.3"}}}
                              , {proper_contrib, "0.3.2"}
                              , {redbug,         "1.2.1"}
