--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,9 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cache/rebar3/hex/hexpm/packages
-        key: ${{ runner.os }}-hex-${{ hashFiles('rebar.lock') }}
+        key: ${{ runner.os }}-otp${{ matrix.otp-version }}-hex-${{ hashFiles('rebar.lock') }}
         restore-keys: |
-          ${{ runner.os }}-hex-
+          ${{ runner.os }}-otp${{ matrix.otp-version }}-hex-
     - name: Cache Dialyzer PLTs
       uses: actions/cache@v3
       with:
@@ -58,9 +58,10 @@ jobs:
         BITBUCKET_SERVER_URL: http://bitbucket:7990
       run: rebar3 as test eunit,ct,proper,cover,covertool generate
     - name: Store test logs
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
+        overwrite: true
         name: logs
         path: |
           _build/test/logs
@@ -76,5 +77,6 @@ jobs:
       if: matrix.otp-version == '25'
       uses: actions/upload-artifact@v4
       with:
+        overwrite: true
         name: edoc
         path: "doc"
